Improve resize tool handling on inverted cubes Fix material icons overflow if icon is missing

--- a/css/setup.css
+++ b/css/setup.css
@@ -298,6 +298,7 @@
 		direction: ltr;
 		-webkit-font-smoothing: antialiased;
 		text-rendering: optimizeLegibility;
+		overflow: hidden;
 	}
 	i.fa_big {
 		font-size: 18px;
